Fix buttons style on small screens

--- a/src/rounds/RoundWrapper/RoundWrapper.scss
+++ b/src/rounds/RoundWrapper/RoundWrapper.scss
@@ -65,7 +65,7 @@
     bottom: 0;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
     padding: 1.5rem;
     border-top: 1px solid $neutral-color;
@@ -86,5 +86,11 @@
         &:nth-child(3) {
             justify-content: flex-end;
         }
+    }
+
+    @media (width < 768px) {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 }
